force-app/main/default/objects/Process_Step__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>