force-app/main/default/objects/Process_Step__c/fields/Layout_Fields__c.field-meta.xml
<CustomField>
    <fullName>Layout_Fields__c</fullName>
    <label>Layout Fields</label>
    <type>TextArea</type>
</CustomField>