force-app/main/default/objects/Process_Step__c/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <label>Step Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>