force-app/main/default/objects/Process_Step__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <label>Target Object / Relationship API Name</label>
    <type>Text</type>
    <length>150</length>
</CustomField>